# dbt_ml

./: .gitignore  Makefile  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
integration_tests/: README.md  dbt_project.yml  package-lock.yml  packages.yml
integration_tests/models/: test_arima_forecast.sql  test_gemini_generation.sql  test_log_regr_prediction.sql
integration_tests/models/ml/: arima_plus_forecast.sql  gemini_flash_connection.sql  logistic_regression.sql
integration_tests/seeds/: text_generation_data.csv  timeseries_data.csv
integration_tests/tests/: test_audit_table_populated.sql  test_forecast_output.sql  test_gemini_output.sql
integration_tests_fusion/: README.md
integration_tests_fusion/models/ml/: arima_plus_forecast.sql  logistic_regression.sql
integration_tests_fusion/seeds/: _seeds.yml  classification_data.csv
integration_tests_fusion/tests/: test_audit_table_populated.sql
macros/: detect_anomalies.sql  forecast.sql  fusion_compat.sql  hparam.sql  predict.sql  recommend.sql
macros/hooks/: model_audit.sql  startup.sql
macros/materializations/: model.sql
